<resources>
    <string name="app_name">ITE</string>
    <string name="connectionError">Não foi possível se conectar. Verifique sua conexão com a internet!</string>
    <string name="generalEmpty">Sem informações para exibir</string>
    <string name="generalExit">Desejar sair do aplicativo?</string>

    <string name="news">Instituição Toledo de Ensino</string>
    <string name="events">Eventos</string>
    <string name="grades">Notas</string>
    <string name="solicitations">Solicitações</string>
    <string name="about">Sobre</string>

    <string name="loginStudentId">Número da matrícula</string>
    <string name="loginPasswordHint">Senha</string>
    <string name="loginEnter">AUTENTICAR</string>
    <string name="loginStudentIdObligatory">ID do aluno é obrigatório!</string>
    <string name="loginPasswordObligatory">Senha do aluno é obrigatória!</string>
    <string name="loginValidatingData">Verificando informações...</string>
    <string name="loginAuthenticationFailed">Matrícula e/ou senha inválidas!</string>
    <string name="loginEmptyStudentError">Ocorreu um erro ao retornar a validação do login. Tente novamente mais tarde!</string>
    <string name="generalSeconds">segundos</string>
    <string name="generalMinutes">minutos</string>
    <string name="generalHours">horas</string>
    <string name="generalDays">dias</string>
    <string name="generalMonths">meses</string>
    <string name="generalYears">anos</string>
    <string name="solicitations_title">Tipo</string>
    <string name="solicitations_comments">Comentários</string>
    <string name="solicitations_send">ENVIAR</string>
    <string name="testOne">P1:</string>
    <string name="testTwo">P2:</string>
    <string name="testThree">P3:</string>
    <string name="testFour">P4:</string>
    <string name="substituteTestOne">Prova Substutiva:</string>
    <string name="substituteTestTwo">Prova Substutiva 2:</string>
    <string name="exam">Exame:</string>
    <string name="noGrades">Não Consta</string>
    <string name="eventStartDate">Começa em </string>
    <string name="eventEndDate">Termina em</string>
    <string name="solicitationSendSuccess">Solicitação enviada!</string>
    <string name="solicitationSendFailed">Ocorreu um erro ao enviar a solicitação!\nVerifique sua conexão ou tente novamente mais tarde.</string>
    <string name="solicitations_info">Qual tipo de serviço você precisa?</string>
    <string name="solicitation_confirmation">Esse serviço custará %s.\nConfirma a solicitação?</string>
    <string name="menu_notification">Notificações</string>
    <string name="loginAuthentication">Autenticação</string>
    <string name="solicitationLoadFailed">Nenhum item</string>
    <string name="loginRequired">Para acessar essa tela, é necessário fazer login!</string>
    <string name="logoutConfirmation">Deseja sair com seus dados?\nAlgumas funcionalidades exigirão login.</string>

</resources>
