<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green2"
    android:padding="10dp"
    android:clipToPadding="true">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/login_logo"
        />

    <TextView
        android:id="@+id/login_required"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_logo"
        android:text="@string/loginRequired"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/login_student_id"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_below="@id/login_required"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/loginStudentId"
        android:textColorHint="@color/gray"
        android:singleLine="true"
        style="@style/LoginEditText"
        />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_below="@id/login_student_id"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:hint="@string/loginPasswordHint"
        android:textColorHint="@color/gray"
        android:singleLine="true"
        style="@style/PasswordEditText"
        />

    <ImageView
        android:id="@+id/login_password_visibility"
        android:layout_below="@id/login_student_id"
        android:layout_alignRight="@id/login_password"
        android:layout_height="24dp"
        android:layout_width="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:src="@drawable/ic_visibility_off"
        android:tint="@color/darkGray"
        />

    <Button
        android:id="@+id/login_enter"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button_white"
        android:elevation="7dp"
        android:textColor="@color/green"
        android:textSize="14sp"
        android:text="@string/loginEnter"
        />

</RelativeLayout>