<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true">

    <RelativeLayout
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:src="@drawable/icon"
            />

    </RelativeLayout>

    <EditText
        android:id="@+id/login_student_id"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_below="@id/login_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/loginStudentId"
        android:singleLine="true"
        style="@style/RoundedEditText"
        />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_below="@id/login_student_id"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:hint="@string/loginPasswordHint"
        android:singleLine="true"
        style="@style/RoundedEditText"
        />

    <ImageView
        android:id="@+id/login_password_visibility"
        android:layout_below="@id/login_student_id"
        android:layout_alignRight="@id/login_password"
        android:layout_height="24dp"
        android:layout_width="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:src="@drawable/ic_visibility_off"
        android:tint="@color/darkGray"
        />

    <Button
        android:id="@+id/login_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_button_green"
        android:elevation="7dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/loginEnter"
        />

</RelativeLayout>